--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -3,34 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey"
     android:padding="@dimen/box_inset_layout_padding"
     tools:context=".AnswerActivity"
     tools:deviceIds="wear">
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--        <HorizontalScrollView-->
-<!--            android:id="@+id/scroll"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content">-->
-
-<!--            &lt;!&ndash;            <ImageView&ndash;&gt;-->
-<!--            &lt;!&ndash;                android:id="@+id/image"&ndash;&gt;-->
-<!--            &lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
-<!--            &lt;!&ndash;                android:layout_height="wrap_content" />&ndash;&gt;-->
-
-
-
-<!--        </HorizontalScrollView>-->
-<!--    </ScrollView>-->
-
     <com.ortiz.touchview.TouchImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/a1" />
+        android:layout_height="wrap_content" />
 
 </androidx.wear.widget.BoxInsetLayout>
