--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/button"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
-    android:textSize="12sp"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp" />
+    android:layout_height="wrap_content"
+    android:minHeight="32dp">
+
+    <TextView
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:textAlignment="center"
+        android:textSize="12sp" />
+
+</FrameLayout>
